# mb2024

./: .gitignore  README.md  encode.sh  encoded.txt  font-optimize.py  foundry.toml  pyproject.toml  remappings.txt
broadcast/Mona2024BirthdayNFTDeployScript.s.sol/1/: run-1706409258.json  run-1706409270.json  run-1706409287.json
broadcast/Mona2024BirthdayNFTDeployScript.s.sol/11155111/: run-1706409038.json  run-1706409059.json  run-1706409080.json  run-1706409086.json  run-latest.json
script/: Counter.s.sol  Mona2024BirthdayNFT.sol  Mona2024BirthdayNFTDeployScript.s.sol  PrintMona2024BirthdayNFT.s.sol
src/: Mona2024BirthdayNFT.sol
test/: Counter.t.sol  Mona2024BirthdayNFT.sol
