[project]
name = "mb2024"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shun Kakinoki", email = "shunkakinoki@gmail.com" }
]
dependencies = [
    "pybase64>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "mb2024:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mb2024"]
